# mg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: imgui.cmake  window.cmake
demos/ui_demo/: CMakeLists.txt
demos/ui_demo/src/: main.cpp
src/mg/: context.cpp  context.hpp  mg.hpp  mg_info.hpp  number_range.hpp  ui.cpp  ui.hpp  vk_error.cpp  vk_error.hpp  window.cpp  window.hpp
src/mg/impl/: context.cpp  context.hpp  descriptor_pool_manager.cpp  descriptor_pool_manager.hpp  memory_allocator.cpp  memory_allocator.hpp  memory_manager.cpp  memory_manager.hpp  reuse_array_util.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_image.cpp  vk_image.hpp  vk_memory.cpp  vk_memory.hpp  window.cpp  window.hpp
